samples/_failures_safe/1761562287_7b3125_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b8f1ef8.c: In function ‘main’:
./samples/SAFE/__tmp_3b8f1ef8.c:182:49: error: expected ‘)’ at end of input
  182 |         printf(", Value='%s'\n", tokens[i].value
      |               ~                                 ^
      |                                                 )
./samples/SAFE/__tmp_3b8f1ef8.c:182:9: error: expected declaration or statement at end of input
  182 |         printf(", Value='%s'\n", tokens[i].value
      |         ^~~~~~
./samples/SAFE/__tmp_3b8f1ef8.c:182:9: error: expected declaration or statement at end of input
